fix image post metadata overflow

--- a/static/css/partials/post/_media.scss
+++ b/static/css/partials/post/_media.scss
@@ -17,7 +17,9 @@
 }
 
 figure {
-	@include clip-path-edges(2px);
+	@include viewport($iphone) {
+		@include clip-path-edges(2px);
+	}
 	@supports (container-type: size) {
 		width: 100%;
 		height: auto;
@@ -30,21 +32,14 @@ figcaption {
 	@include font-weight-width(700, 120);
 	transition: .5s cubic-bezier(.64, 0, .78, 0);
 	opacity: 0;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-start;
-	align-content: flex-start;
-	justify-content: space-between;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	padding: calc(var(--p)*2);
 	background-color: hsla(var(--color-iron-10-hsl), .9);
 	color: white;
 	font-size: 1.125rem;
-	overflow-y: auto;
 	@media (prefers-reduced-motion: no-preference) {
 		translate: 0 50%;
 	}
@@ -61,6 +56,21 @@ figcaption {
 	}
 	@container metadata (min-width: 400px) {
 		font-size: 1.25rem;
+	}
+	.media-data-wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: flex-start;
+		align-content: flex-start;
+		justify-content: space-between;
+		width: 100%;
+		height: 100%;
+		padding: calc(var(--p)*2);
+		overflow-y: auto;
+		mask-image: linear-gradient(to bottom, rgba(black, 1), rgba(black, 0)), linear-gradient(to bottom, rgba(black, 1), rgba(black, 1));
+		mask-position: bottom center, top center;
+		mask-repeat: no-repeat, no-repeat;
+		mask-size: 100% calc(var(--p)*2.5), 100% calc(100% - var(--p)*2.5);
 	}
 	.time-default {
 		background-color: hsla(var(--color-iron-12-hsl), .9);
